--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,5 +9,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA09pHUVw00qI6l1QNxGoWIUPyn339rvAE&callback=initMap&v=weekly"
+      defer
+    ></script> -->
   </body>
 </html>
