fix: change type of birthday from date to string (#174)
* fix: modfiy column birthday type to string

* fix: change type of birthday to string

* fix: type of birth day to string(frontend)

* fix: form birthday type

* fix: get-joinable-leagues service

* feat: add seo settings

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,10 +6,10 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://kafa.one" />
     <meta property="og:title" content="대한미식축구협회" />
-    <meta property="og:image" content="/images/logo.png" />
+    <meta property="og:image" content="/logo/logo.png" />
     <meta property="og:image:width" content="800" />
     <meta property="og:image:height" content="400" />
-    <meta property="og:description" content="대한미식축구협회" />
+    <meta property="og:description" content="대한미식축구협회 홈페이지입니다" />
     <meta property="og:site_name" content="KAFA" />
     <meta property="og:locale" content="ko_KR" />
     <link
@@ -86,6 +86,7 @@
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
     <meta name="theme-color" content="#ffffff" />
+    <meta name="대한미식축구협회 홈페이지입니다" />
     <title>대한미식축구협회</title>
   </head>
   <body>
