fix: open graph image

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,9 +6,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://kafa.one" />
     <meta property="og:title" content="대한미식축구협회" />
-    <meta property="og:image" content="/logo/logo.png" />
-    <meta property="og:image:width" content="488" />
-    <meta property="og:image:height" content="200" />
+    <meta property="og:image" content="/og_img.png" />
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="600" />
     <meta property="og:description" content="대한미식축구협회 홈페이지입니다" />
     <meta property="og:site_name" content="KAFA" />
     <meta property="og:locale" content="ko_KR" />
